# cppsocks

./: .clang-format  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: StaticAnalyzers.cmake
cmake/toolchain/: toolchain.linux-x64-clang.cmake  toolchain.linux-x64.cmake  toolchain.nt-x86.cmake
examples/: CMakeLists.txt
examples/http_server/: CMakeLists.txt  main.cpp
examples/http_simple/: main.cpp
examples/system_context/: CMakeLists.txt  system_impl.h  system_impl.hpp  system_posix.cpp
examples/tcp_echo/: CMakeLists.txt  main.cpp
examples/tcp_push/: CMakeLists.txt  main.cpp
examples/ws_echo/: CMakeLists.txt  main.cpp
examples/ws_push/: CMakeLists.txt  handler.cpp  handler.hpp  main.cpp  manager.hpp  pusher.cpp  pusher.hpp
src/: CMakeLists.txt  main.cpp  system_context.h  system_posix.h  ws.cpp  ws.h  ws_client.h  ws_error.h  ws_fwd.h  ws_handler.h  ws_options.h  ws_types.h  ws_worker.cpp  ws_worker.h
src/examples/: CMakeLists.txt
src/examples/echo/: CMakeLists.txt  main.cpp  system_posix.cpp  system_posix.h
src/examples/http_server/: main.cpp
src/examples/http_simple/: CMakeLists.txt
src/examples/push/: CMakeLists.txt  main.cpp
src/examples/system_context/: CMakeLists.txt  system_impl.h  system_posix.cpp  system_posix.h
src/examples/tcp_echo/: CMakeLists.txt
src/http/: CMakeLists.txt  socks_http.cpp  socks_http.h  socks_http.hpp  socks_http_handler.cpp  socks_http_handler.h  socks_http_handler.hpp  socks_http_states.cpp  socks_http_states.h  socks_http_states.hpp  socks_http_states_ws.cpp  socks_http_states_ws.h  socks_http_states_ws.hpp  socks_ws_frame.cpp  socks_ws_frame.hpp  socks_ws_handler.cpp  socks_ws_handler.h  socks_ws_handler.hpp  socks_ws_types.h  socks_ws_types.hpp
src/tcp/: CMakeLists.txt  socks_system_context.h  socks_system_context.hpp  socks_tcp.cpp  socks_tcp.h  socks_tcp.hpp  socks_tcp_error.h  socks_tcp_error.hpp  socks_tcp_fwd.h  socks_tcp_fwd.hpp  socks_tcp_handler.h  socks_tcp_handler.hpp  socks_tcp_options.h  socks_tcp_options.hpp  socks_tcp_types.h  socks_tcp_types.hpp  socks_tcp_util.hpp  socks_tcp_worker.cpp  socks_tcp_worker.h  socks_tcp_worker.hpp
test/: CMakeLists.txt  fixtures.py  index.html  integration_tests.sh  pytest.ini  test_byteorder.cpp  test_http.py  test_simple.cpp  test_tcp.py  test_ws.py  test_ws_frame.cpp
